Improved description readability, added button link Feature Request: Add field for Source URL #94 Bug Report: Description Box does not match formatting inputted #96

--- a/src/core/header/Header.module.css
+++ b/src/core/header/Header.module.css
@@ -56,7 +56,14 @@
 .tags {
     display: flex;
     justify-content: flex-start;
-    @media (max-width: $ mantine-breakpoint-xs) {
+
+    @media (max-width: $mantine-breakpoint-xs) {
         flex-direction: column;
     }
+}
+
+.link {
+    position: absolute;
+    top: rem(10px);
+    right: rem(10px);
 }
